--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "dependencies": {
         "@supabase/auth-helpers-nextjs": "^0.10.0",
         "@supabase/supabase-js": "^2.38.4",
+        "lucide-react": "^0.539.0",
         "next": "14.2.5",
         "react": "^18.3.1",
-        "react-dom": "^18.3.1"
+        "react-dom": "^18.3.1",
+        "stripe": "^18.4.0",
+        "tw-animate-css": "^1.3.6"
     },
     "devDependencies": {
         "@types/node": "^20.8.10",
